# unfold

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  todos.md  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: frontend.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COLOR_SYSTEM.md  DEVELOPER_GUIDE.md  frontend-restructure.md
scripts/: migrate.mjs  tauri.mjs
src/: App.css  App.tsx  main.tsx  router.tsx  store.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/nodes/: allow-nodes.toml
src-tauri/resources/: custom-layout.json  default-layout.json  default-settings.json
src-tauri/src/: main.rs  migrations.rs
src-tauri/src/commands/: images.rs  layout_commands.rs  mod.rs  nodes.rs  settings_commands.rs  web-import.rs  web_import.rs
src-tauri/src/helpers/: mod.rs  nodes_helpers.rs
src-tauri/src/models/: layout.rs  mod.rs  nodes.rs  settings.rs  web-import.rs
src-tauri/src/services/: layout_service.rs  mod.rs  settings_service.rs
src-tauri/src/utils/: mod.rs  web-import.rs
src/api/: nodes.ts
src/app/: index.css  provider.tsx  router.tsx
src/config/: customization-defaults.ts  keyboard-shortcuts.ts  paths.ts  sidebar.ts
src/contexts/: EditorContext.tsx  FileSystemContext.tsx  LayoutContext.tsx  ThemeContext.tsx
src/data/: initial-filesystem.ts
src/hooks/: use-debounce.ts  use-editor-search.ts  use-file-validation.ts  use-fullscreen.ts  use-global-sidebar-shortcuts.ts  use-index-redirect.ts  use-layout-config.ts  use-note-search.ts  use-settings.ts  (+1 more)
(+286 files in other folders)
