[package]
name = "unfold"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mathangi Krishnamurthy"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["protocol-asset", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6.0"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
